//package com.mehdilagdimi.chiforek.entity.mean;
//
//import com.mehdilagdimi.chiforek.base.enums.SERVICE;
//import com.mehdilagdimi.chiforek.base.enums.SERVICESCOPE;
//
//import javax.persistence.DiscriminatorValue;
//import javax.persistence.Entity;
//
//@Entity
//@DiscriminatorValue("bigtaxi")
//public class BigTaxi extends Mean {
//
//
//    private static final SERVICE service = SERVICE.TRANSPORT;
//
//    private static final SERVICESCOPE servicescope = SERVICESCOPE.NATIONAL;
//
//}
