//package com.mehdilagdimi.chiforek.entity.mean;
//
//import com.mehdilagdimi.chiforek.base.enums.SERVICE;
//import com.mehdilagdimi.chiforek.base.enums.SERVICESCOPE;
//
//import javax.persistence.DiscriminatorValue;
//import javax.persistence.Entity;
//
//
//@Entity
//@DiscriminatorValue("independantvehicle")
//public class IndependantVehicle extends Mean {
//
//    public static final SERVICE service = SERVICE.TRANSPORT;
//    public static final SERVICESCOPE servicescope = SERVICESCOPE.LOCAL_NATIONAL;
//
//}
