package com.mehdilagdimi.chiforek.entity.payment;

import com.mehdilagdimi.chiforek.base.PaymentGate;

import javax.persistence.Entity;

@Entity
public class PayPal extends PaymentGate {
}
