package com.mehdilagdimi.chiforekv2.enums;

public enum SERVICE {
    TRANSPORT,
    RELOCATION,
    CAR_POOLING
}